--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <title>Salary Predictor</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="title">Twitter Stock Predictor</h1>
-    <form>
-      <p><label>Age:</label><input name="age" /></p>
-      <p><label>Height:</label><input name="height" /></p>
-      <p><label>Ethnicity:</label><input name="ethnicity" /></p>
-      <p><label>Gender:</label><input name="gender" /></p>
-      <p><label>Experience: </label><input name="experience" /></p>
-      <input type="submit" />
-      <input type="reset" />
-    </form>
+    <div class="header">
+      <h1 class="title">Twitter Stock Predictor</h1>
+    </div>
+    <div class="formContents">
+      <form>
+        <p><label>Start Date: </label><input type="date" max="2022-12-10" /></p>
+        <p><label>End Date: </label><input type="date" max="2022-12-10" /></p>
+        <input type="submit" />
+        <input type="reset" />
+      </form>
+    </div>
   </body>
 </html>
