--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="header">
-      <h1 class="title">Twitter Stock Predictor</h1>
+    <div class="container">
+      <div class="notification is-primary">
+        <h1 class="title">Twitter Stock Predictor</h1>
+      </div>
     </div>
     <div class="formContents">
       <form>
