Added imgs folder and added twitter logo to button

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </p>
     </form>
     <div class="submitButton">
-      <button class="button is-primary">Make a Prediction</button>
+      <button><img src="imgs/2021 Twitter logo - blue.png" width="8%"></button>
     </div>
   </body>
 </html>
